tests/paczka1/small_fuzzy/86246563.err
Error in line 6: VjOBTSQKy A84 78,1
Error in line 4: TQ1u86Qnw A84 40,6
Error in line 10: BwN0a9Bk A458 53,9
Error in line 15: VjOBTSQKy A999 76,1
